// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/DatePicker No value 1`] = `
<Component
  onChange={[Function]}
>
  <div>
    <t
      allowSameDay={false}
      customInput={<ForwardRef />}
      customTimeInput={null}
      dateFormat="P"
      dateFormatCalendar="LLLL yyyy"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      enableTabLoop={true}
      excludeScrollbar={true}
      inlineFocusSelectedMonth={false}
      monthsShown={1}
      nextMonthButtonLabel="Next Month"
      nextYearButtonLabel="Next Year"
      onBlur={[Function]}
      onCalendarClose={[Function]}
      onCalendarOpen={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onInputClick={[Function]}
      onInputError={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      peekNextMonth={true}
      preventOpenOnFocus={false}
      previousMonthButtonLabel="Previous Month"
      previousYearButtonLabel="Previous Year"
      readOnly={false}
      renderDayContents={[Function]}
      selected={null}
      shouldCloseOnSelect={true}
      showMonthDropdown={true}
      showMonthYearPicker={false}
      showPopperArrow={true}
      showPreviousMonths={false}
      showQuarterYearPicker={false}
      showTimeInput={false}
      showTimeSelect={false}
      showYearDropdown={true}
      strictParsing={false}
      timeCaption="Time"
      timeInputLabel="Time"
      timeIntervals={30}
      withPortal={true}
    >
      <div>
        <div
          className="react-datepicker__input-container"
        >
          <DatePickerInput
            className=""
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            value=""
          >
            <WithStyles(DatePickerInputComp)
              className=""
              disabled={false}
              innerRef={[Function]}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              theme={Object {}}
              value=""
            >
              <DatePickerInputComp
                className=""
                classes={
                  Object {
                    "input": "DatePickerInputComp-input-0-3-113",
                  }
                }
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                value=""
              >
                <Input
                  className="DatePickerInputComp-input-0-3-113"
                  classes={
                    Object {
                      "input": "DatePickerInputComp-input-0-3-113",
                    }
                  }
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={true}
                  type="text"
                  value=""
                >
                  <WithStyles(InputComp)
                    className="DatePickerInputComp-input-0-3-113"
                    classes={
                      Object {
                        "input": "DatePickerInputComp-input-0-3-113",
                      }
                    }
                    disabled={false}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    readOnly={true}
                    theme={Object {}}
                    type="text"
                    value=""
                  >
                    <InputComp
                      className="DatePickerInputComp-input-0-3-113"
                      classes={
                        Object {
                          "error": "InputComp-error-0-3-107",
                          "fullWidth": "InputComp-fullWidth-0-3-108",
                          "input": "DatePickerInputComp-input-0-3-113",
                          "root": "InputComp-root-0-3-106",
                        }
                      }
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={true}
                      type="text"
                      value=""
                    >
                      <input
                        className="DatePickerInputComp-input-0-3-113 InputComp-root-0-3-106"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        readOnly={true}
                        type="text"
                        value=""
                      />
                    </InputComp>
                  </WithStyles(InputComp)>
                </Input>
              </DatePickerInputComp>
            </WithStyles(DatePickerInputComp)>
          </DatePickerInput>
        </div>
      </div>
    </t>
  </div>
</Component>
`;

exports[`Storyshots Components/DatePicker Value 1`] = `
<Component
  onChange={[Function]}
  value={2019-12-26T17:45:00.000Z}
>
  <div>
    <t
      allowSameDay={false}
      customInput={<ForwardRef />}
      customTimeInput={null}
      dateFormat="P"
      dateFormatCalendar="LLLL yyyy"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      enableTabLoop={true}
      excludeScrollbar={true}
      inlineFocusSelectedMonth={false}
      monthsShown={1}
      nextMonthButtonLabel="Next Month"
      nextYearButtonLabel="Next Year"
      onBlur={[Function]}
      onCalendarClose={[Function]}
      onCalendarOpen={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onInputClick={[Function]}
      onInputError={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      peekNextMonth={true}
      preventOpenOnFocus={false}
      previousMonthButtonLabel="Previous Month"
      previousYearButtonLabel="Previous Year"
      readOnly={false}
      renderDayContents={[Function]}
      selected={2019-12-26T17:45:00.000Z}
      shouldCloseOnSelect={true}
      showMonthDropdown={true}
      showMonthYearPicker={false}
      showPopperArrow={true}
      showPreviousMonths={false}
      showQuarterYearPicker={false}
      showTimeInput={false}
      showTimeSelect={false}
      showYearDropdown={true}
      strictParsing={false}
      timeCaption="Time"
      timeInputLabel="Time"
      timeIntervals={30}
      withPortal={true}
    >
      <div>
        <div
          className="react-datepicker__input-container"
        >
          <DatePickerInput
            className=""
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            value="12/26/2019"
          >
            <WithStyles(DatePickerInputComp)
              className=""
              disabled={false}
              innerRef={[Function]}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              theme={Object {}}
              value="12/26/2019"
            >
              <DatePickerInputComp
                className=""
                classes={
                  Object {
                    "input": "DatePickerInputComp-input-0-3-113",
                  }
                }
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                value="12/26/2019"
              >
                <Input
                  className="DatePickerInputComp-input-0-3-113"
                  classes={
                    Object {
                      "input": "DatePickerInputComp-input-0-3-113",
                    }
                  }
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={true}
                  type="text"
                  value="12/26/2019"
                >
                  <WithStyles(InputComp)
                    className="DatePickerInputComp-input-0-3-113"
                    classes={
                      Object {
                        "input": "DatePickerInputComp-input-0-3-113",
                      }
                    }
                    disabled={false}
                    innerRef={null}
                    jssContext={
                      Object {
                        "classNamePrefix": "",
                        "disableStylesGeneration": false,
                      }
                    }
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    readOnly={true}
                    theme={Object {}}
                    type="text"
                    value="12/26/2019"
                  >
                    <InputComp
                      className="DatePickerInputComp-input-0-3-113"
                      classes={
                        Object {
                          "error": "InputComp-error-0-3-107",
                          "fullWidth": "InputComp-fullWidth-0-3-108",
                          "input": "DatePickerInputComp-input-0-3-113",
                          "root": "InputComp-root-0-3-106",
                        }
                      }
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      readOnly={true}
                      type="text"
                      value="12/26/2019"
                    >
                      <input
                        className="DatePickerInputComp-input-0-3-113 InputComp-root-0-3-106"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        readOnly={true}
                        type="text"
                        value="12/26/2019"
                      />
                    </InputComp>
                  </WithStyles(InputComp)>
                </Input>
              </DatePickerInputComp>
            </WithStyles(DatePickerInputComp)>
          </DatePickerInput>
        </div>
      </div>
    </t>
  </div>
</Component>
`;
